# sqlafunccodegen

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt  requirements_generated.txt  requirements_test.txt
.github/workflows/: push_checks.yml
scripts/: get_graphile_file.py
sqlafunccodegen/: introspectionQuery.js  main.py
tests/: generate.sh  out_asyncpg_only.py  out_func.py  out_python.py  out_sqlalchemy.py  run_tests.sh  schema.ddl  test.py
