[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9,<4"
name = "sqlafunccodegen"
dependencies = [
    "asyncpg==0.29.*",
    "sqlalchemy==2.0.30",
    "typer==0.12.*"
]
version = "0.0.0"

[project.scripts]
sqlafunccodegen = "sqlafunccodegen.main:cli"

[tool.setuptools.packages.find]
include = ["sqlafunccodegen"]
namespaces = false

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2
combine_as_imports = true
py_version=311

[tool.pyright]
pythonVersion = "3.11"
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
useLibraryCodeForTypes = true

[tool.ruff]
lint.select = ["F401"]
line-length = 80
